--- a/src/app/wallet/recovery-phrase-words/recovery-phrase-words.component.html
+++ b/src/app/wallet/recovery-phrase-words/recovery-phrase-words.component.html
@@ -1,23 +1,23 @@
 <h2>{{'wallet.backup' | translate}}</h2>
 
-<p class="description">{{'user.please_enter' | translate}}</p>
+<p class="description">{{'wallet.please_enter' | translate}}</p>
 
 <div class="words" *ngIf="numberArray.length">
 	<div class="words__word">
 		<input type="text" class="input--small" [formControl]="word1"/>
-		<small>{{'user.word' | translate}} {{numberArray[0]}}</small>
+		<small>{{'wallet.word' | translate}} {{numberArray[0]}}</small>
 	</div>
 	<div class="words__word">
 		<input type="text" class="input--small" [formControl]="word2"/>
-		<small>{{'user.word' | translate}} {{numberArray[1]}}</small>
+		<small>{{'wallet.word' | translate}} {{numberArray[1]}}</small>
 	</div>
 	<div class="words__word">
 		<input type="text" class="input--small" [formControl]="word3"/>
-		<small>{{'user.word' | translate}} {{numberArray[2]}}</small>
+		<small>{{'wallet.word' | translate}} {{numberArray[2]}}</small>
 	</div>
 	<div class="words__word">
 		<input type="text" class="input--small" [formControl]="word4"/>
-		<small>{{'user.word' | translate}} {{numberArray[3]}}</small>
+		<small>{{'wallet.word' | translate}} {{numberArray[3]}}</small>
 	</div>
 </div>
 
