--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -20,5 +20,6 @@
                 <h1>Wallet</h1>
             </div>
             <img src="assets/images/{{title === 'reset-password' ? 'reset' : 'login'}}-illustration.svg" alt="">
+            <p class="copyright">© 2019 everyone</p>
         </div>
     </div>
