--- a/src/app/user/register/register.component.html
+++ b/src/app/user/register/register.component.html
@@ -36,8 +36,8 @@
 <p class="error-message" *ngIf="emailControl.value !=='' && emailType">{{'error.invalid_email' | translate}}</p>
 <p class="error-message" *ngIf="errorMessage">{{errorMessage | translate}}</p>
 
-	<div class="share-app">
-		<img src="assets/images/AppStore.svg" alt="">
-		<img src="assets/images/GooglePlay.svg" alt="">
-	</div>
+<div class="share-app">
+	<a href=""><img src="assets/images/AppStore.svg" alt=""></a>
+	<a href=""><img src="assets/images/GooglePlay.svg" alt=""></a>
+</div>
 </div>
