--- a/src/app/user/register/register.component.scss
+++ b/src/app/user/register/register.component.scss
@@ -15,13 +15,16 @@ input {
 }
 .share-app{
 	margin-top: 56px;
-	img{
+	a{
 		display: inline-block;
-		height: 40px;
 		&:not(:last-child){
 			margin-right: 24px;
 		}
+		img{
+			height: 40px;
+		}
 	}
+
 }
 .buttons-container {
 	display: flex;
