--- a/src/app/wallet/wallet-inner/wallet-inner.component.html
+++ b/src/app/wallet/wallet-inner/wallet-inner.component.html
@@ -16,90 +16,98 @@
 
 <form novalidate (ngSubmit)="transfer()" [formGroup]="transferForm">
 	<div class="transfer-section">
-	<h2>{{'wallet.transfer' | translate}} {{token == 'eveg'?  'EVEG' : 'EVEO'}}</h2>
-	<p class="description">{{'wallet.send' | translate}} {{token == 'eveg'?  'EVEG' : 'EVEO'}} {{'wallet.to_the_account' | translate}}</p>
+		<h2>{{'wallet.transfer' | translate}} {{token == 'eveg'?  'EVEG' : 'EVEO'}}</h2>
+		<p class="description">{{'wallet.send' | translate}} {{token == 'eveg'?  'EVEG' : 'EVEO'}}
+			{{'wallet.to_the_account' | translate}}</p>
 
-	<label>{{'wallet.rec_address' | translate}}</label>
-	<input type="text" placeholder="{{'wallet.enter_address' | translate}}" formControlName="address">
-	<p class="error-message" *ngIf="transferForm.controls['address'].errors && transferForm.controls['address'].errors.invalidAddress">{{'error.invalid_address' | translate}}</p>
+		<label>{{'wallet.rec_address' | translate}}</label>
+		<input type="text" placeholder="{{'wallet.enter_address' | translate}}" formControlName="address">
+		<p class="error-message"
+			*ngIf="transferForm.controls['address'].errors && transferForm.controls['address'].errors.invalidAddress">
+			{{'error.invalid_address' | translate}}</p>
 
-	<label>{{token == 'eveg'?  'EVEG' : 'EVEO'}} Amount</label>
-	<div class="form-fields">
-		<div class="coin-field">
-			<input type="text" placeholder="{{token == 'eveg'?  'EVEG' : 'EVEO'}}" formControlName="amount">
-			<p class="error-message" *ngIf="amountErrorMessage" fxLayout="row" [innerHTML]="amountErrorMessage"></p>
-		</div>
-		<div class="transaction-fee">
-			<div>
-				<label>{{'wallet.gas_price' | translate}}</label>
-				<input type="text" formControlName="gasPrice" [value]="transferForm.controls['gasPrice'].value"> <span>Gwei</span>
+		<label>{{token == 'eveg'?  'EVEG' : 'EVEO'}} Amount</label>
+		<div class="form-fields">
+			<div class="coin-field">
+				<input type="text" placeholder="{{token == 'eveg'?  'EVEG' : 'EVEO'}}" formControlName="amount">
+				<p class="error-message" *ngIf="amountErrorMessage" fxLayout="row" [innerHTML]="amountErrorMessage"></p>
 			</div>
-
-			<mat-slider
-					tickInterval="1000"
-					formControlName="gasPrice"
-					[value]="transferForm.controls['gasPrice'].value"
-					min="{{settings?.min}}"
-					max="{{settings?.max}}"></mat-slider>
+			<div class="transaction-fee">
+				<div>
+					<label>{{'wallet.gas_price' | translate}}</label>
+					<span>[Gwei]</span>
+				</div>
+				<span>{{settings?.min}}</span>
+				<mat-slider thumbLabel [displayWith]="formatLabel" formControlName="gasPrice"
+					[value]="transferForm.controls['gasPrice'].value" min="{{settings?.min}}" max="{{settings?.max}}">
+				</mat-slider>
+				<span>{{settings?.max}}</span>
+			</div>
+		</div>
+		<div>
+			<button class="button button--primary button--upper" [disabled]="transferForm.invalid"
+				(click)="generateTransaction()">{{'wallet.generate' | translate}}</button>
 		</div>
 	</div>
-	<div>
-		<button class="button button--primary button--upper" [disabled]="transferForm.invalid" (click)="generateTransaction()">{{'wallet.generate' | translate}}</button>
-	</div>
-</div>	
 </form>
 
 <div class="hline"></div>
 
 <div class="history-section">
 	<h2>{{'wallet.history' | translate}}</h2>
-	<div *ngIf="token == 'eveg'" >
+	<div *ngIf="token == 'eveg'">
 		<div class="transaction" *ngFor="let action of evegTransactions">
-		<div class="transaction__first-col">
-			<h3 class="transaction__type transaction__type--received" *ngIf="action.toAddress == this.address">{{'wallet.received' | translate}}</h3>
-			<h3 class="transaction__type transaction__type--sent" *ngIf="action.fromAddress == this.address">{{'wallet.sent' | translate}}</h3>
-			<h3 class="transaction__amount">{{action.amount}} EVEG</h3>
-		</div>
-		<div class="transaction-data">
-			<div class="transaction-data__peer">
-				<small *ngIf="action.fromAddress == this.address">{{'wallet.payment_to' | translate}}</small>
-				<small *ngIf="action.toAddress == this.address">{{'wallet.payment_from' | translate}}</small>
-				<span *ngIf="action.fromAddress == this.address">{{action.toAddress}}</span>
-				<span *ngIf="action.toAddress == this.address">{{action.fromAddress}}</span>
+			<div class="transaction__first-col">
+				<h3 class="transaction__type transaction__type--received" *ngIf="action.toAddress == this.address">
+					{{'wallet.received' | translate}}</h3>
+				<h3 class="transaction__type transaction__type--sent" *ngIf="action.fromAddress == this.address">
+					{{'wallet.sent' | translate}}</h3>
+				<h3 class="transaction__amount">{{action.amount}} EVEG</h3>
 			</div>
-			<div class="transaction-data__date">
-				<b>{{getHours(action.timestamp*1000)}}</b>
-				<span>{{getDate(action.timestamp*1000)}}</span>
-			</div>
-		</div>
-	</div>	
-	</div>
-	<div *ngIf="token == 'eveo'" >
-		<div class="transaction" *ngFor="let action of eveoTransactions">
-		<div class="transaction__first-col">
-			<h3 class="transaction__type transaction__type--received" *ngIf="action.toAddress == this.address">{{'wallet.received' | translate}}</h3>
-			<h3 class="transaction__type transaction__type--sent" *ngIf="action.fromAddress == this.address">{{'wallet.sent' | translate}}</h3>
-		
-			<h3 class="transaction__amount">{{action.amount}} EVEO</h3>
-		</div>
-		<div class="transaction-data">
-			<div class="transaction-data__peer">
+			<div class="transaction-data">
+				<div class="transaction-data__peer">
 					<small *ngIf="action.fromAddress == this.address">{{'wallet.payment_to' | translate}}</small>
 					<small *ngIf="action.toAddress == this.address">{{'wallet.payment_from' | translate}}</small>
 					<span *ngIf="action.fromAddress == this.address">{{action.toAddress}}</span>
 					<span *ngIf="action.toAddress == this.address">{{action.fromAddress}}</span>
+				</div>
+				<div class="transaction-data__date">
+					<b>{{getHours(action.timestamp*1000)}}</b>
+					<span>{{getDate(action.timestamp*1000)}}</span>
+				</div>
 			</div>
-			<div class="transaction-data__date">
+		</div>
+	</div>
+	<div *ngIf="token == 'eveo'">
+		<div class="transaction" *ngFor="let action of eveoTransactions">
+			<div class="transaction__first-col">
+				<h3 class="transaction__type transaction__type--received" *ngIf="action.toAddress == this.address">
+					{{'wallet.received' | translate}}</h3>
+				<h3 class="transaction__type transaction__type--sent" *ngIf="action.fromAddress == this.address">
+					{{'wallet.sent' | translate}}</h3>
+
+				<h3 class="transaction__amount">{{action.amount}} EVEO</h3>
+			</div>
+			<div class="transaction-data">
+				<div class="transaction-data__peer">
+					<small *ngIf="action.fromAddress == this.address">{{'wallet.payment_to' | translate}}</small>
+					<small *ngIf="action.toAddress == this.address">{{'wallet.payment_from' | translate}}</small>
+					<span *ngIf="action.fromAddress == this.address">{{action.toAddress}}</span>
+					<span *ngIf="action.toAddress == this.address">{{action.fromAddress}}</span>
+				</div>
+				<div class="transaction-data__date">
 					<b>{{getHours(action.timestamp)}}</b>
 					<span>{{getDate(action.timestamp)}}</span>
 				</div>
+			</div>
 		</div>
 	</div>
-	</div>
 	<div style="margin-top: 30px;text-align: center;cursor:pointer" *ngIf="lastEveg && token == 'eveg'">
-		<button class="button button--primary button--upper" [disabled]="seeMorebool" (click)="seeMore()">{{'wallet.see_more' | translate}}</button>
+		<button class="button button--primary button--upper" [disabled]="seeMorebool"
+			(click)="seeMore()">{{'wallet.see_more' | translate}}</button>
 	</div>
 	<div style="text-align: center;margin-top: 30px;cursor:pointer" *ngIf="lastEveo && token == 'eveo'">
-		<button class="button button--primary button--upper" [disabled]="seeMorebool" (click)="seeMore()">{{'wallet.see_more' | translate}}</button>
+		<button class="button button--primary button--upper" [disabled]="seeMorebool"
+			(click)="seeMore()">{{'wallet.see_more' | translate}}</button>
 	</div>
 </div>
