--- a/src/app/core/private-key/private-key.component.scss
+++ b/src/app/core/private-key/private-key.component.scss
@@ -38,6 +38,10 @@ p.description {
 	}
 }
 
+.error-message {
+	margin: -16px 0 22px;
+}
+
 input[type="password"] {
 	width: 100%;
 	margin: 0 0 35px;
