--- a/src/app/core/recovery-phrase/recovery-phrase.component.scss
+++ b/src/app/core/recovery-phrase/recovery-phrase.component.scss
@@ -24,6 +24,10 @@ p.description {
 	padding: 10px 24px;
 }
 
+.error-message {
+	margin: -16px 0 22px;
+}
+
 input[type="password"] {
 	width: 100%;
 	margin: 0 0 35px;
