--- a/src/app/user/register/register.component.html
+++ b/src/app/user/register/register.component.html
@@ -37,7 +37,8 @@
 <p class="error-message" *ngIf="errorMessage">{{errorMessage | translate}}</p>
 
 <div class="share-app">
-	<a href=""><img src="assets/images/AppStore.svg" alt=""></a>
-	<a href=""><img src="assets/images/GooglePlay.svg" alt=""></a>
+  <a href="javascript:void(0)"><img src="assets/images/AppStore.svg" alt=""></a>
+  <a href="javascript:void(0)"><img src="assets/images/GooglePlay.svg" alt=""></a>
 </div>
+
 </div>
