--- a/src/app/user/reset-password/reset-password.component.html
+++ b/src/app/user/reset-password/reset-password.component.html
@@ -7,3 +7,8 @@
   </div>
   <p class="error-message" *ngIf="invalidPhrase">{{'user.invalid_rec' | translate}}</p>
 </form>
+
+<div class="share-app">
+  <a href="javascript:void(0)"><img src="assets/images/AppStore.svg" alt=""></a>
+  <a href="javascript:void(0)"><img src="assets/images/GooglePlay.svg" alt=""></a>
+</div>
