--- a/src/app/user/register/register.component.scss
+++ b/src/app/user/register/register.component.scss
@@ -32,10 +32,6 @@ input {
 	justify-content: space-between;
 	margin: 0 0 20px;
 
-	.button {
-		padding: 16px 32px;
-	}
-
 	a {
 		font-weight: 600;
 	}
@@ -55,6 +51,11 @@ input {
 			background-color: #607bed;
 		}
 	}
+}
+
+.input-wrapper__shadow {
+	top: -1px; left: -1px;
+	right: -1px; bottom: -1px;
 }
 
 p.terms {
