--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -6,8 +6,8 @@
                 </div>
             </div>
             <div class="auth-col__logo">
-                <img src="assets/images/eveg-colored.svg"/>
-                <img src="assets/images/eveo-colored.svg"/>
+                <img src="assets/images/eveg@2x.svg"/>
+                <img src="assets/images/eveo@2x.svg"/>
             </div>
             <div class="auth-col__inner">
                 <router-outlet (activate)="onRouterOutletActivate($event)"></router-outlet>
