--- a/src/app/user/create-password/create-password.component.html
+++ b/src/app/user/create-password/create-password.component.html
@@ -1,7 +1,7 @@
 <div class="sat-loading" *ngIf="loading">
   <mat-spinner></mat-spinner>
 </div>
-<div *ngIf="!loading">
+<div *ngIf="!loading" style="box-shadow: none">
   <h2>{{'user.create_password' | translate}}</h2>
 <p class="descr"> {{'user.enter_password_text' | translate}}</p>
 <form novalidate (ngSubmit)="change()" [formGroup]="passwordForm">
