--- a/src/app/wallet/wallet/wallet.component.html
+++ b/src/app/wallet/wallet/wallet.component.html
@@ -4,6 +4,11 @@
 			<span></span>
 
 			<div class="menu">
+				<div class="wallet-menu">
+					<img src="assets/images/wallet.svg" alt="">
+					<span>Ethereum {{'wallet.balance' | translate}}: </span>
+					<span>{{ethBalance}}</span>
+				</div>
 				<div class="menu-items menu-items--open" >
 					<a (click)="settings()">{{'wallet.security' | translate}}</a>
 					<a (click)="signout()">{{'wallet.sign_out' | translate}}</a>
