--- a/src/app/wallet/recovery-first/recovery-first.component.html
+++ b/src/app/wallet/recovery-first/recovery-first.component.html
@@ -1,5 +1,5 @@
 
-<h2>{{'wallet.recovery_phrase' | translate}</h2>
+<h2>{{'wallet.recovery_phrase' | translate}}</h2>
 
 <div class="alert-container">
 	<img src="assets/images/alert.svg">
