--- a/src/app/wallet/wallet-inner/wallet-inner.component.scss
+++ b/src/app/wallet/wallet-inner/wallet-inner.component.scss
@@ -116,7 +116,14 @@ p.description {
 		padding: 5px 6px 5px 10px;
 	}
 
-	.transaction-fee {
+	.transaction-fee .error-message {
+		text-align: right;
+		@media screen and (max-width: 767px) {
+			text-align: left;
+		}
+	}
+
+	.transaction-fee > div{
 		display: flex;
 		align-items: flex-start;
 
