--- a/src/app/core/really-postpone/really-postpone.component.html
+++ b/src/app/core/really-postpone/really-postpone.component.html
@@ -2,7 +2,7 @@
 
 <div class="alert-container">
 	<img src="assets/images/alert.svg">
-	<p>{{'wallet.are_you_sure' | translate}}<span>{{'in_case_text' | translate}}</span></p>
+	<p>{{'wallet.are_you_sure' | translate}}<span>{{'wallet.in_case_text' | translate}}</span></p>
 </div>
 
 <div class="buttons">
