--- a/src/app/wallet/wallet/wallet.component.html
+++ b/src/app/wallet/wallet/wallet.component.html
@@ -6,8 +6,7 @@
 			<div class="menu">
 				<div class="wallet-menu">
 					<img src="assets/images/wallet.svg" alt="">
-					<span>Ethereum {{'wallet.balance' | translate}}: </span>
-					<span>{{ethBalance}}</span>
+					<span>{{ethBalance}} ETH</span>
 				</div>
 				<div class="menu-items menu-items--open" >
 					<a (click)="settings()">{{'wallet.security' | translate}}</a>
