--- a/src/app/core/private-key/private-key.component.html
+++ b/src/app/core/private-key/private-key.component.html
@@ -21,7 +21,7 @@
 	</div>
 
 	<div class="public-key">
-		<span>{{privateKey}}</span>
+		<span class="notranslate">{{privateKey}}</span>
 		<img src="assets/images/copy.svg" (click)="copy()">
 	</div>
 	<label *ngIf="backup">
