--- a/src/app/wallet/settings/settings.component.html
+++ b/src/app/wallet/settings/settings.component.html
@@ -30,7 +30,7 @@
 		</h3>
 		<div class="security__item__inner security__item__inner--address">
 			<div>
-				<span>{{account.address}}</span>
+				<span class="notranslate">{{account.address}}</span>
 				<img (click)="copy()" src="assets/images/copy.svg">
 			</div>
 		</div>
