--- a/src/app/wallet/wallet-inner/wallet-inner.component.html
+++ b/src/app/wallet/wallet-inner/wallet-inner.component.html
@@ -71,7 +71,7 @@
 					{{'wallet.received' | translate}}</h3>
 				<h3 class="transaction__type transaction__type--sent" *ngIf="action.fromAddress == this.address">
 					{{'wallet.sent' | translate}}</h3>
-				<h3 class="transaction__amount">{{action.amount}} EVEG</h3>
+				<h3 class="transaction__amount">{{action.amount | numberPipe}} EVEG</h3>
 			</div>
 			<div class="transaction-data">
 				<div class="transaction-data__peer">
