--- a/src/app/wallet/recovery-first/recovery-first.component.html
+++ b/src/app/wallet/recovery-first/recovery-first.component.html
@@ -6,8 +6,9 @@
 	<p>{{'wallet.only_way' | translate}}<br/>{{'wallet.cant_recovered' | translate}}</p>
 </div>
 
-<div class="recovery-phrase" class="notranslate">
-{{brainKey}}</div>
+<div class="recovery-phrase" >
+	<span class="notranslate">{{brainKey}}</span>
+</div>
 
 <p class="recovery-phrase-text">{{'wallet.strongly_recomended' | translate}}</p>
 
