--- a/src/app/core/really-postpone/really-postpone.component.html
+++ b/src/app/core/really-postpone/really-postpone.component.html
@@ -1,4 +1,4 @@
-<h2>{{'wallet.backup_pvk' | translate}}</h2>
+<h2>{{'wallet.recovery_phrase' | translate}}</h2>
 
 <div class="alert-container">
 	<img src="assets/images/alert.svg">
