--- a/src/app/wallet/recovery-first/recovery-first.component.html
+++ b/src/app/wallet/recovery-first/recovery-first.component.html
@@ -3,16 +3,14 @@
 
 <div class="alert-container">
 	<img src="assets/images/alert.svg">
-	<p>{{'wallet.only_way' | translate}}<br/>{{'wallet.cant_recovered' | translate}}</p>
+	<p>{{'wallet.only_way_first' | translate}}</p>
 </div>
 
 <div class="recovery-phrase" >
 	<span class="notranslate">{{brainKey}}</span>
 </div>
 
-<p class="recovery-phrase-text">{{'wallet.strongly_recomended' | translate}}</p>
-
 <div class="buttons">
-	<button class="button button--primary button--fat button--upper" (click)="recover()">{{'wallet.ok' | translate}}</button>
+	<button class="button button--primary button--fat button--upper" (click)="recover()">{{'wallet.backup_1' | translate}}</button>
 	<button class="button button--upper button--fat" (click)="later()">{{'wallet.later' | translate}}</button>
 </div>
