--- a/src/app/wallet/settings/settings.component.html
+++ b/src/app/wallet/settings/settings.component.html
@@ -11,7 +11,7 @@
 <div class="alert-container">
 	<img src="assets/images/alert.svg">
 	<p>
-		{{'wallet.have_to_backup' | translate}}
+		{{'wallet.have_to_backup_pvk_and_phrase' | translate}}
 	</p>
 </div>
 
