--- a/src/app/user/create-password/create-password.component.html
+++ b/src/app/user/create-password/create-password.component.html
@@ -2,13 +2,13 @@
   <mat-spinner></mat-spinner>
 </div>
 <div *ngIf="!loading" style="box-shadow: none">
-  <h2>{{'user.create_password' | translate}}</h2>
+  <h2>{{(recovering? 'user.create_new_password' : 'user.create_password') | translate}}</h2>
 <p class="descr"> {{'user.enter_password_text' | translate}}</p>
 <form novalidate (ngSubmit)="change()" [formGroup]="passwordForm">
-  <input type="password" placeholder="{{'user.password' | translate}}" formControlName="password">
-  <input type="password" placeholder="{{'user.confirm_pass' |translate}}" formControlName="confirmPassword">
+  <input type="password" placeholder="{{(recovering? 'user.new_password' : 'user.password') | translate}}" formControlName="password">
+  <input type="password" placeholder="{{(recovering? 'user.confirm_new_pass' : 'user.confirm_pass') | translate}}" formControlName="confirmPassword">
   <div class="buttons-container">
-    <button class="button button--fat button--upper button--primary" type="submit" [disabled]="passwordForm.untouched && passwordForm.controls['password'].value !== '' && passwordForm.controls['confirmPassword'].value !== ''">{{'user.save' | translate}}</button>
+    <button class="button button--fat button--upper button--primary" type="submit" [disabled]="passwordForm.untouched && passwordForm.controls['password'].value !== '' && passwordForm.controls['confirmPassword'].value !== ''">{{'user.submit' | translate}}</button>
   </div>
   <p class="error-message" *ngIf="passwordForm.errors && passwordForm.errors.invalidConfirmPassword && passType">{{'user.pass_do_not_match' | translate}}</p>
   <p *ngIf="passwordForm.controls['password'].invalid && passwordForm.controls['password'].touched && passwordForm.controls['password'].value !== '' && passType" class="error-message">
