--- a/src/app/user/register/register.component.html
+++ b/src/app/user/register/register.component.html
@@ -32,7 +32,7 @@
 </div>
 
 <!-- <p class="terms">{{'user.by_registering' | translate}} <a href="#">{{'user.terms_and_conditions' | translate}}</a></p> -->
-
+<p class="terms"></p>
 <p class="error-message" *ngIf="emailControl.value !=='' && emailType">{{'error.invalid_email' | translate}}</p>
 <p class="error-message" *ngIf="errorMessage">{{errorMessage | translate}}</p>
 
