--- a/src/app/user/create-password/create-password.component.html
+++ b/src/app/user/create-password/create-password.component.html
@@ -8,7 +8,7 @@
   <input type="password" placeholder="{{(recovering? 'user.new_password' : 'user.password') | translate}}" formControlName="password">
   <input type="password" placeholder="{{(recovering? 'user.confirm_new_pass' : 'user.confirm_pass') | translate}}" formControlName="confirmPassword">
   <div class="buttons-container">
-    <button class="button button--fat button--upper button--primary" type="submit" [disabled]="passwordForm.untouched && passwordForm.controls['password'].value !== '' && passwordForm.controls['confirmPassword'].value !== ''">{{'user.submit' | translate}}</button>
+    <button class="button button--fat button--upper button--primary pass-btn" type="submit" [disabled]="passwordForm.untouched && passwordForm.controls['password'].value !== '' && passwordForm.controls['confirmPassword'].value !== ''">{{'user.submit' | translate}}</button>
   </div>
   <p class="error-message" *ngIf="passwordForm.errors && passwordForm.errors.invalidConfirmPassword && passType">{{'user.pass_do_not_match' | translate}}</p>
   <p *ngIf="passwordForm.controls['password'].invalid && passwordForm.controls['password'].touched && passwordForm.controls['password'].value !== '' && passType" class="error-message">
