--- a/src/app/core/private-key/private-key.component.html
+++ b/src/app/core/private-key/private-key.component.html
@@ -17,7 +17,7 @@
 
 	<div class="alert-container">
 		<img src="assets/images/alert.svg">
-		<p>{{'wallet.have_to_backup_pvk' | translate}}</p>
+		<p>{{'wallet.pvk_tooltip' | translate}}</p>
 	</div>
 
 	<div class="public-key">
