--- a/src/app/wallet/settings/settings.component.html
+++ b/src/app/wallet/settings/settings.component.html
@@ -10,8 +10,11 @@
 
 <div class="alert-container">
 	<img src="assets/images/alert.svg">
-	<p>
+	<p *ngIf="!account.privateKeySaved || !account.brainKeySaved">
 		{{'wallet.have_to_backup_pvk_and_phrase' | translate}}
+	</p>
+	<p *ngIf="account.privateKeySaved && account.brainKeySaved">
+		{{'wallet.the_only_way' | translate}}
 	</p>
 </div>
 
