--- a/src/app/wallet/wallet/wallet.component.html
+++ b/src/app/wallet/wallet/wallet.component.html
@@ -20,7 +20,7 @@
 					<img src="assets/images/eveg.svg" alt="">
 					<div class="wallet-card__name">
 						<h3>EVEG</h3>
-						<h4 class="notranslate">{{evegBalance | numberPipe}}<small>EVEG</small></h4>
+						<h4 class="notranslate">{{evegBalance}}<small>EVEG</small></h4>
 					</div>
 				</div>
 			</div>
@@ -29,7 +29,7 @@
 					<img src="assets/images/eveo.svg" alt="">
 					<div class="wallet-card__name">
 						<h3>EVEO</h3>
-						<h4 class="notranslate">{{eveoBalance | numberPipe}}<small>EVEO</small></h4>
+						<h4 class="notranslate">{{eveoBalance}}<small>EVEO</small></h4>
 					</div>
 				</div>
 			</div>
