--- a/src/app/wallet/wallet-inner/wallet-inner.component.scss
+++ b/src/app/wallet/wallet-inner/wallet-inner.component.scss
@@ -16,6 +16,12 @@ p.description {
 	font-size: 16px;
 	line-height: 18px;
 }
+p.balance{
+	color: #8A8FA5;
+	font-size: 19px;
+	line-height: 18px;
+	margin-left:10px
+}
 .form-fields{
 	display: flex;
 	align-items: flex-start;
