--- a/src/app/wallet/wallet/wallet.component.html
+++ b/src/app/wallet/wallet/wallet.component.html
@@ -16,20 +16,18 @@
 		</div>
 		<div class="wallet">
 			<div class="wallet-card a" [ngClass]="{'wallet-card--active':active == 'eveg'}" (click)="setActive('eveg')">
-				<div class="wallet-card__inner wallet-card__inner--gold">
+				<div class="wallet-card__inner wallet-card__inner--gold"  [ngClass]="{'no-curser':disabled}">
 					<img src="assets/images/eveg.svg" alt="">
 					<div class="wallet-card__name">
 						<h3>EVEG</h3>
-						<h4 class="notranslate">{{evegBalance}}<small>EVEG</small></h4>
 					</div>
 				</div>
 			</div>
 			<div class="wallet-card b" [ngClass]="{'wallet-card--active':active == 'eveo'}" (click)="setActive('eveo')">
-				<div class="wallet-card__inner wallet-card__inner--silver">
+				<div class="wallet-card__inner wallet-card__inner--silver" [ngClass]="{'no-curser':disabled}">
 					<img src="assets/images/eveo.svg" alt="">
 					<div class="wallet-card__name">
 						<h3>EVEO</h3>
-						<h4 class="notranslate">{{eveoBalance}}<small>EVEO</small></h4>
 					</div>
 				</div>
 			</div>
